--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,7 +8,8 @@ body,html
   width: 100%
   height: 300px
   background-color: #424242
-  // position: relative
+  // overflow-x: auto
+
 
 /*給予排版範圍*/
 .container
@@ -209,3 +210,11 @@ form
   text-align: center
   line-height: 35px
   font-size: 18px
+
+
+@media (min-width: 700px)
+  .wrap
+    overflow-x: auto
+@media (max-width: 820px)
+  .note
+    width: 620px
