--- a/css/style.css
+++ b/css/style.css
@@ -257,3 +257,11 @@ form {
   text-align: center;
   line-height: 35px;
   font-size: 18px; }
+
+@media (min-width: 700px) {
+  .wrap {
+    overflow-x: auto; } }
+
+@media (max-width: 820px) {
+  .note {
+    width: 620px; } }
