--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,7 @@ body, html {
   margin-top: 80px;
   height: 140px;
   width: 140px;
-  background: url(https://hexschool.github.io/JavaScript_HomeWork/assets/BMICLogo.png) center center no-repeat;
-  background-color: #FFD366; }
+  background: url(../imgs/BMICLogo.png) center center no-repeat; }
 
 /*input*/
 form {
@@ -156,7 +155,7 @@ form {
 
 .fa {
   text-align: center;
-  color: #dedede;
+  color: #222;
   line-height: 30px; }
 
 /*BMI 數字狀態*/
