--- a/sass/style.sass
+++ b/sass/style.sass
@@ -27,8 +27,8 @@ body,html
   margin-top: 80px
   height: 140px
   width: 140px
-  background: url(https://hexschool.github.io/JavaScript_HomeWork/assets/BMICLogo.png)  center center no-repeat
-  background-color: #FFD366
+  background: url(../imgs/BMICLogo.png)  center center no-repeat
+  // background-color: #FFD366
   
 /*input*/
 form
@@ -114,7 +114,7 @@ form
   right: -3px
 .fa
   text-align: center
-  color: #dedede
+  color: #222
   line-height: 30px
   
 /*BMI 數字狀態*/
